--- a/TrabFacul/index.html
+++ b/TrabFacul/index.html
@@ -35,7 +35,7 @@
         </tr>
     </table>
 
-    <a href="https://www.youtube.com/@BRclubTV" target="_blank">Acesse o BRclub TV no YouTube</a>
+    <a href="https://www.youtube.com/@BRclubTV" target="_blank">Acesse o meu canal favorito do Youtube BRclub TV </a>
 
     <button onclick="showMessage()">Clique para ver uma mensagem!</button>
     <p id="message" style="display:none;">Supra é modinha, Skyline R34 sempre foi e sempre será melhor!</p>
