--- a/TrabFacul/index.html
+++ b/TrabFacul/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Seu Nome Aqui</h1>
-    <p>Olá! Meu nome é [Alvin Andrew Soinski], tenho [24 anos] anos e moro em [Curitiba - PR]. Sou apaixonado por [Carros], e alguns dos meus hobbies incluem:</p>
+    <p>Olá! Meu nome é [Seu Nome], tenho [Sua Idade] anos e moro em [Sua Cidade]. Sou apaixonado por [interesses], e alguns dos meus hobbies incluem:</p>
     <ul>
-        <li>Jogar CS2</li>
+        <li>Jogar CS</li>
         <li>Carros modificados</li>
         <li>Carros turbo e carros de drift</li>
+        <li>Desenvolver projetos de IA</li>
     </ul>
     <img src="682bebe9-7dce-4eab-9d9b-736bc71ce19a.png" alt="Carros de Drift" class="hobby-image" />
 
@@ -35,7 +36,7 @@
         </tr>
     </table>
 
-    <a href="https://www.youtube.com/@BRclubTV" target="_blank">Acesse o meu canal favorito do Youtube BRclub TV </a>
+    <a href="https://www.youtube.com/@BRclubTV" target="_blank">Acesse o BRclub TV no YouTube</a>
 
     <button onclick="showMessage()">Clique para ver uma mensagem!</button>
     <p id="message" style="display:none;">Supra é modinha, Skyline R34 sempre foi e sempre será melhor!</p>
