--- a/TrabFacul/index.html
+++ b/TrabFacul/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <h1>Seu Nome Aqui</h1>
-    <p>Olá! Meu nome é [Seu Nome], tenho [Sua Idade] anos e moro em [Sua Cidade]. Sou apaixonado por [interesses], e alguns dos meus hobbies incluem:</p>
+    <p>Olá! Meu nome é [Alvin Andrew Soinski], tenho [24 anose] anos e moro em [Curitiba PR]. Sou apaixonado por [carros], e alguns dos meus hobbies incluem:</p>
     <ul>
         <li>Jogar CS</li>
         <li>Carros modificados</li>
         <li>Carros turbo e carros de drift</li>
-        <li>Desenvolver projetos de IA</li>
     </ul>
     <img src="682bebe9-7dce-4eab-9d9b-736bc71ce19a.png" alt="Carros de Drift" class="hobby-image" />
 
