--- a/TrabFacul/index.html
+++ b/TrabFacul/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Apresentação do Aluno</title>
+    <title>Apresentação Alvin</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Seu Nome Aqui</h1>
-    <p>Olá! Meu nome é [Alvin Andrew Soinski], tenho [24 anose] anos e moro em [Curitiba PR]. Sou apaixonado por [carros], e alguns dos meus hobbies incluem:</p>
+    <h1>Alvin Soinski</h1>
+    <p>Olá! Meu nome é [Alvin Soinski], tenho [24 anos] anos e moro em [Curitiba PR]. Sou apaixonado por [carros], e alguns dos meus hobbies incluem:</p>
     <ul>
         <li>Jogar CS</li>
         <li>Carros modificados</li>
