--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Alvin Soinski</h1>
-    <p>Olá! Meu nome é [Alvin Soinski], tenho [24 anos] anos e moro em [Curitiba PR]. Sou apaixonado por [carros], e alguns dos meus hobbies incluem:</p>
+    <p>Olá! Meu nome é Alvin Soinski, tenho 24 anos anos e moro em Curitiba PR. Sou apaixonado por carros, e alguns dos meus hobbies incluem:</p>
     <ul>
         <li>Jogar CS</li>
         <li>Carros modificados</li>
